[package]
name = "captain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
include_dir = "0.7.3"
tera = "1.18.1"
trace = "0.1.7"
tracing-subscriber = "0.3.16"
