[package]
name = "captain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
rust-embed = { version = "6.6.0", features = ["actix-web", "interpolate-folder-path", "compression", "mime-guess", "debug-embed"] }
tera = "1.18.1"
trace = "0.1.7"
tracing-subscriber = "0.3.16"
