[package]
name = "captain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-web-lab = "0.19.1"
actix-web-rust-embed-responder = "2.2.0"
rust-embed = "6.6.0"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
tera = "1.18.1"
trace = "0.1.7"
tracing-subscriber = "0.3.16"
